--- a/MessagingService/appsettings.json
+++ b/MessagingService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDb": "Server=localhost,1433;User=SA;Password=Welkom12345; TrustServerCertificate=true"
+  }
 }
