--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -41,22 +41,40 @@ jobs:
 
   docker_build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix: 
+        include:
+          - image: ImageUploadService
+            dockerfile: ImageUploadService/Dockerfile
+          - image: MessagingService
+            dockerfile: MessagingService/Dockerfile
+          - image: UserService
+            dockerfile: UserService/Dockerfile
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Build and push
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ matrix.image }}
+      -
+        name: Build and push
         uses: docker/build-push-action@v4
         with:
+          context: .
+          file: ${{ matrix.dockerfile }}
           push: true
-          tags: yarikbrouwer/lt:latest
-          file: MessagingService/Dockerfile
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
           
       
