--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -73,7 +73,7 @@ jobs:
           context: .
           file: ${{ matrix.dockerfile }}
           push: true
-          tags: ${{ steps.meta.outputs.tags }} :latest
+          tags: ${{ steps.meta.outputs.tags }}
 
 
           
