--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -73,8 +73,8 @@ jobs:
           context: .
           file: ${{ matrix.dockerfile }}
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-
+          tags: ${{ matrix.dockerfile }}:latest
+          labels: ${{ steps.meta.outputs.labels }
 
           
       
