Implemented get, post and delete messages

--- a/MessagingService/appsettings.json
+++ b/MessagingService/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDb": "Server=localhost,1433;User=SA;Password=Welkom12345; TrustServerCertificate=true"
+    "AppDb": "Server=localhost,1433;User=SA;Password=Welkom12345;TrustServerCertificate=true;"
   }
 }
