--- a/LT_Frontend/package.json
+++ b/LT_Frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.3",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
