--- a/.github/workflows/Frontend-CI.yml
+++ b/.github/workflows/Frontend-CI.yml
@@ -17,9 +17,12 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
+          sparse-checkout: .
           node-version: latest
       - name: install dependencies
-        run: npm install        
+        run: npm install
+      - name: build
+        run: npm run dev
             
   docker_build:
     runs-on: ubuntu-latest
