--- a/.github/workflows/Frontend-CI.yml
+++ b/.github/workflows/Frontend-CI.yml
@@ -17,10 +17,9 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          sparse-checkout: .
           node-version: latest
       - name: install dependencies
-        run: npm install
+        run: npm install LT_Frontend
       - name: build
         run: npm run dev
             
