--- a/.github/workflows/Frontend-CI.yml
+++ b/.github/workflows/Frontend-CI.yml
@@ -1,61 +1,66 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
-name: CI
+# This is a basic workflow to help you get started with Actions
+name: CI-CD Frontend
 
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ "main", "develop" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
 
 jobs:
+  # This workflow contains multiple jobs
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: latest
-      - name: install dependencies
-        run: npm install "LT_Frontend"
-      - name: build
-        run: npm run dev
-            
-  docker_build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
-      matrix: 
-        include:
-          - image: LTFrontend
-            dockerfile: LT_Frontend/Dockerfile
-            
+      matrix:
+        node-version: [20.10.0]
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
-        name: Login to Docker Hub
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: setup node
+        uses: actions/setup-node@master
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      # install applicaion dependencies
+      - name: Install dependencies
+        run: |
+          npm install
+      # build and test the apps
+      - name: build
+        run: |
+          npm run build
+          
+  push_to_Docker_Hub:
+
+    runs-on: ubuntu-latest
+    # build docker image and push to docker hub
+    # only if the app build and test successfully
+    needs: [build]
+    steps:
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      -
-        name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ matrix.image }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ${{ matrix.dockerfile }}
-          push: true
-          tags: yarikbrouwer/${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
 
-          
-      
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: yarikbrouwer/LTFrontend:latest
+
