--- a/.github/workflows/Frontend-CI.yml
+++ b/.github/workflows/Frontend-CI.yml
@@ -62,5 +62,5 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: yarikbrouwer/LTFrontend:latest
+          tags: yarikbrouwer/ltfrontend:latest
 
