--- a/.github/workflows/Frontend-CI.yml
+++ b/.github/workflows/Frontend-CI.yml
@@ -37,30 +37,33 @@ jobs:
 #          npm run build
           
   push_to_Docker_Hub:
-
     runs-on: ubuntu-latest
-    # build docker image and push to docker hub
-    # only if the app build and test successfully
-    needs: [build]
+    strategy:
+      matrix:
+        include:
+          - image: LTfrontend
+            dockerfile: LT_Frontend/Dockerfile
     steps:
-      
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
+      - name: Checkout
+        uses: actions/checkout@v3
+        
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v2
+          
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
         with:
-          context: ./
-          file: ./Dockerfile
+          images: ${{ matrix.image }}
+          
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ${{ matrix.dockerfile }}
           push: true
-          tags: yarikbrouwer/ltfrontend:latest
-
+          tags: yarikbrouwer/${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
