--- a/LT_Frontend/Dockerfile
+++ b/LT_Frontend/Dockerfile
@@ -1,12 +1,7 @@
 FROM node:latest as build
-
-WORKDIR /app
-
-COPY ./ /app/
-
+WORKDIR '/app'
+COPY ./package.json ./
 RUN npm install
-
-RUN npm run dev
-
+COPY . .
+CMD ["npm", "run", "dev"]
 EXPOSE 5173
-
