--- a/LT_Frontend/Dockerfile
+++ b/LT_Frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:latest as build
 WORKDIR '/app'
-COPY ./package.json ./
+COPY ./ /app/
 RUN npm install
 COPY . .
 CMD ["npm", "run", "dev"]
