--- a/LT_Frontend/Dockerfile
+++ b/LT_Frontend/Dockerfile
@@ -1,8 +1,7 @@
 FROM node:latest
 WORKDIR /app
-COPY package.json ./
-RUN npm install -g
-COPY ./ ./
+COPY ./ /app
+RUN npm install
+COPY . .
 EXPOSE 5173
 CMD ["npm", "run", "dev"]
-
