--- a/LT_Frontend/Dockerfile
+++ b/LT_Frontend/Dockerfile
@@ -1,8 +1,6 @@
 FROM node:latest as build
 WORKDIR /app
-RUN ls -al 
-COPY package*.json ./
-RUN ls -al 
+ADD . /app
 RUN npm install
 COPY . .
 EXPOSE 5173
