--- a/LT_Frontend/Dockerfile
+++ b/LT_Frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:latest as build
 WORKDIR /app
 COPY . .
-RUN npm install
+RUN npm install nodemon -g
 EXPOSE 5173
 CMD ["npm", "run", "dev"]
