--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -21,6 +21,7 @@ jobs:
       uses: Azure/login@v1.5.1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
+        client-id: 
     - name: Azure CLI Action
       uses: Azure/cli@v1.0.9
       with:
