--- a/Kubernetes/lt-frontend-deployment.yaml
+++ b/Kubernetes/lt-frontend-deployment.yaml
@@ -25,7 +25,7 @@ spec:
         io.kompose.service: lt-frontend
     spec:
       containers:
-        - image: vite-app:latest
+        - image: lumbridgetimes.azurecr.io/ltfrontend:latest
           name: ltfrontend
           ports:
             - containerPort: 5173
