--- a/Kubernetes/lt-frontend-service.yaml
+++ b/Kubernetes/lt-frontend-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose convert
+    kompose.cmd: C:\Users\yarik\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
     kompose.version: 1.31.2 (a92241f79)
   creationTimestamp: null
   labels:
