--- a/Kubernetes/lt-imageuploadservice-deployment.yaml
+++ b/Kubernetes/lt-imageuploadservice-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert
+    kompose.cmd: C:\Users\yarik\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
     kompose.version: 1.31.2 (a92241f79)
   creationTimestamp: null
   labels:
@@ -17,7 +17,7 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose convert
+        kompose.cmd: C:\Users\yarik\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
         kompose.version: 1.31.2 (a92241f79)
       creationTimestamp: null
       labels:
