--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Test
-        #run: dotnet test --no-build --verbosity normal
+        run: dotnet test -t
 
   docker_build:
     runs-on: ubuntu-latest
