--- a/.github/workflows/CypressTests.yml
+++ b/.github/workflows/CypressTests.yml
@@ -8,10 +8,23 @@ on:
 
 jobs:
   cypress-run:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20.10.0]
+        
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: setup node
+        uses: actions/setup-node@master
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      # install application dependencies
+      - name: Install dependencies
+        run: |
+          npm install --prefix ./LT_Frontend 
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
