--- a/.github/workflows/CypressTests.yml
+++ b/.github/workflows/CypressTests.yml
@@ -20,6 +20,6 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           working-directory: ./LT_Frontend
-          build: npm run dev
-          start: npm start
+          build: npm run build
+          start: npm run dev
           browser: chrome
